MDEV-9148: Assertion `thd->stmt_arena != thd->progress.arena' failed in thd_progress_init

Called thd_progress_init() from several threads used for FT-index
creation. For FT-indexes, need better way to report progress,
remove current one for them.